Update CLI code to Java 8 - Release v1.1.0-beta1